envoy-local.yaml
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/ingest" }
                          direct_response:
                            status: 403
                            body: { inline_string: "Direct ingestion forbidden by Sentinel SOC API Gateway." }
                        - match: { prefix: "/" }
                          route:
                            cluster: analytics_cluster
                            timeout: 60s
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: analytics_cluster
      type: STRICT_DNS # Use STRICT_DNS for local docker networks
      load_assignment:
        cluster_name: analytics_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: analytics # Resolves to the Docker container
                      port_value: 8080     # The internal C# port
